--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mi Portfolio</title>
 </head>
 <body>
-  <h1>Mi Portfolio</h1>
+  <h1 style = "text-align: center";>Mi Portfolio</h1>
   <p>Bienvenido!</p>
 </body>
 </html>
