--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Mi Portfolio</title>
 </head>
 <body>
-  <h1>Mi Portfolio</h1>
+  <header>Mi Portfolio</header>
+  
   <p>Bienvenido!</p>
 </body>
 </html>
